syntax = "proto3";

package product;

option go_package = "github.com/Geawn/Ms_E-commerce_BE/product-service/proto";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc SearchProducts(SearchProductsRequest) returns (ListProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message Product {
  uint32 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  uint32 category_id = 7;
  string created_at = 8;
  string updated_at = 9;
  Category category = 10;
  repeated Variant variants = 11;
}

message Category {
  uint32 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
}

message Variant {
  uint32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  string slug = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message SearchProductsRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message CreateProductRequest {
  string name = 1;
  string slug = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  uint32 category_id = 6;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  double price = 5;
  int32 stock = 6;
  uint32 category_id = 7;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
} 